Attempt to fix rotate on ios

--- a/src/components/EndScore.module.css
+++ b/src/components/EndScore.module.css
@@ -22,7 +22,9 @@
     position: absolute;
     height: 100%;
     width: 100%;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+    z-index: 1;
     border-radius: 3px;
 }
 
